# PRIMO

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
data/catalogs/: rules_1_1.json  rules_1_2.json  rules_2_3.json  rules_3_4.json
experiments/: exp01_validate.py  exp02_example_b.py  exp03_straightness.py  exp04_enumeration.py  exp06_temporal_profiles.py  exp07_dpo_null_model.py  exp08_crosscheck.py  exp09_eigenvalue_gaps.py  exp09b_confirm_borderline.py  exp10_perturbation_response.py  exp11_perturbation_ratio.py  exp12_dehn_twist.py  exp_physics_fingerprint.py  exp_physics_fingerprint_gpu.py
logs/: decisions.md  experiments.md
papers/: Makefile  intermediate_physics.md  notation.md  paper1_predicates.md  paper2_bayesian.md  paper3_hierarchy.md  primo_conjecture.md
papers/paper1-predicates/: Makefile  predicates.tex
papers/paper2-bayesian/: Makefile  bayesian.tex
papers/paper3-hierarchy/: Makefile  hierarchy.tex
papers/paper4-primo/: Makefile  primo.tex
papers/shared/: primo-macros.sty  primo.bib  primo.cls
primo/: __init__.py  backend.py  config.py  monitor.py  predicates.py  rules.py  run_utils.py  trajectories.py
reference/: example_b_analysis.md  primo_diagnostic_output_v5.txt  primo_diagnostic_v5.py
tests/: test_backend.py  test_monitor.py  test_predicates.py  test_regression.py  test_rules.py
