[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "primo"
version = "0.1.0"
description = "Primacy of Inference over Physics in the Space of Minimal Programs"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.2",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
gpu = ["torch>=2.2"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["primo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
